[package]
name = "quickcheck"
version = "1.0.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense OR MIT"
exclude = ["/Makefile", "/ctags.rust", "/session.vim"]
edition = "2021"

[workspace]
members = ["quickcheck_macros"]

[lib]
name = "quickcheck"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng"] }
