[package]
name = "qcheck-macros"
version = "1.0.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "A macro attribute for quickcheck."
documentation = "https://docs.rs/qcheck"
homepage = "https://github.com/cloudhead/qcheck"
repository = "https://github.com/cloudhead/qcheck"
readme = "../README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
license = "Unlicense OR MIT"
autotests = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
